--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
     function updateTheme(score) {
         if (score > 0.5) {
             document.body.className = "state-good";
-            statusDisplay.innerText = "✨ 바른 자세입니다";
+            statusDisplay.innerText = "✨ 베리 굿이여~ 바른 자세입니다";
             statusDisplay.style.color = "#0984e3";
         } else {
             document.body.className = "state-warning";
@@ -196,3 +196,4 @@
 
 </body>
 </html>
+
